--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -11,17 +11,18 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-# url = "https://github.com/CaiJimmy/hugo-theme-stack"
 url = "https://github.com/lucaxgomex"
 
 [social.params]
 icon = "brand-github"
 
 # Twitter
-[[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+# [[social]]
+# identifier = "twitter"
+# name = "Twitter"
+# url = "https://twitter.com"
 
-[social.params]
-icon = "brand-twitter"
+# [social.params]
+# icon = "brand-twitter"
+
+
