--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,6 @@
 # Change baseurl before deploy
-baseurl = "https://demo.stack.jimmycai.com"
+# baseurl = "https://demo.stack.jimmycai.com"
+baseurl = "https://lucaxgomex.github.io/"
 languageCode = "en-us"
 title = "Lucas Gomes de Oliveira"
 
